[package]
name = "webtext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
html2text = "0.11.0"
ratatui = "0.25.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
tui-input = "0.8.0"
